--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.3.1",
     "@prisma/client": "^5.14.0",
     "dotenv": "^16.4.5",
     "prisma": "^5.14.0",
+    "prisma-class-generator": "^0.2.9",
+    "prisma-dbml-generator": "^0.12.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -68,7 +71,12 @@
     "coverageDirectory": "./coverage",
     "testEnvironment": "node",
     "roots": [
-      "<rootDir>/apps/"
-    ]
+      "<rootDir>/apps/",
+      "<rootDir>/libs/"
+    ],
+    "moduleNameMapper": {
+      "^@app/libs(|/.*)$": "<rootDir>/libs/libs/src/$1",
+      "^@app/common(|/.*)$": "<rootDir>/libs/common/src/$1"
+    }
   }
 }
