--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/microservices": "^10.3.8",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.1",
     "@prisma/client": "^5.14.0",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.4",
     "dotenv": "^16.4.5",
+    "joi": "^17.13.1",
     "prisma": "^5.14.0",
     "prisma-class-generator": "^0.2.9",
     "prisma-dbml-generator": "^0.12.0",
