--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@prisma/client": "^5.14.0",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.4",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "joi": "^17.13.1",
     "prisma": "^5.14.0",
